# vuln_ai_system

vuln_ai_system/: README.md  pyproject.toml  requirements-vllm-ascend.txt  requirements.txt
vuln_ai_system/config/: system.yaml
vuln_ai_system/data/runs/20260628_093432/: findings.xlsx
vuln_ai_system/data/runs/20260628_093716/: findings.xlsx
vuln_ai_system/data/source/: sample_vuln.py
vuln_ai_system/data/targets/: targets.example.txt  targets.sample.txt  targets.txt
vuln_ai_system/deploy/docker/: Dockerfile  docker-compose.yml
vuln_ai_system/deploy/offline/phase1/: 00_env_probe.sh  01_prepare_rpm_cache_online.sh  01b_install_ascend_runtime_offline.sh  02_prepare_python_wheels_online.sh  03_prepare_vllm_ascend_wheels_online.sh  04_pack_phase1_bundle.sh  05_offline_selfcheck.sh
vuln_ai_system/deploy/systemd/: aivuln-api.service  aivuln-vllm.service
vuln_ai_system/docs/: ASCEND_VLLM_DEPLOY.md  PHASE1_SERVER_INIT.md
vuln_ai_system/scripts/: download_vllm_ascend_wheels.sh  install_offline.sh  install_systemd.sh  pack_offline.sh  run_once.sh  start_all.sh  start_api.sh  start_vllm.sh  stop_all.sh
vuln_ai_system/src/aivuln/: api.py  cli.py
vuln_ai_system/src/aivuln/core/: config.py  logging.py  models.py  state.py
vuln_ai_system/src/aivuln/dynamic_scan/: prober.py
vuln_ai_system/src/aivuln/llm/: client.py
vuln_ai_system/src/aivuln/output/: excel.py
vuln_ai_system/src/aivuln/static_scan/: rules.py  scanner.py
