[project]
name = "aivuln"
version = "0.1.0"
description = "Offline AI vulnerability mining pipeline"
requires-python = ">=3.9"
dependencies = [
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "openpyxl==3.1.5",
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
  "pydantic==2.10.4"
]

[project.scripts]
aivuln = "aivuln.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

